--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -38,9 +39,15 @@
     "passport-strategy": "^1.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@types/express-session": "^1.17.5",
     "@types/node-fetch": "^2.6.2",
     "@types/passport-strategy": "^0.2.35",
+    "@types/supertest": "^2.0.12",
+    "express": "^4.18.2",
+    "jest": "^29.3.1",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.7.4"
   }
 }
