--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest": "^29.3.1",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
