--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "DEBUG=criipto/verify-express node index.js"
+    "start": "DEBUG=criipto/verify-express* node index.js"
   },
   "author": "",
   "license": "ISC",
